--- a/中間試験.md
+++ b/中間試験.md
@@ -36,3 +36,7 @@
 2025-06-29
 RubyとRailsの提出が終了した。
 Railsで中間試験は終了のため、レビューで通っていたら明日解答例を見て復習の上ミニアプリ開発に入る。
+
+2025-06-30
+解答例をみると自身のコードに比べて見やすいし統一されていると感じた。
+フォームオブジェクトという複数のモデルにまたがる入力処理や、複雑なバリデーションをまとめる専用クラスがあることを知った。
