--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -1,4 +1,17 @@
 2026-07-01
 テキストを読みながらrailsnewを試みてlocalhost3000の画面まではいけたもののTailwindがうまく反映できずに
 終わってしまった。
-明日はスクールが過去に公式で出している完全理解Railsnewのアーカイブを視聴しもう一度環境構築を試みたい
+明日はスクールが過去に公式で出している完全理解Railsnewのアーカイブを視聴しもう一度環境構築を試みたい.
+
+2026-07-02
+gemでのインストールに変えたことによってTailwindで文字の色を変えることができ環境構築が無事に成功した。
+明日はデザインが思い浮かばないためFigmaのアーカイブを視聴することで使い方を学習し、デザインのテンプレートを確認したい。
+
+2026-07-03
+環境構築が終わったと思ったが突然のエラーで振り出しに戻る。同期の助けを得てなんとか再構築に成功した。
+明日は画面設計を行う。
+
+2026-07-04
+今日はfigmaのアーカイブを見て画面設計を行なった。
+初めてのツールで戸惑いも大きかったがスマホ版の画面設計を行なった。
+明日はPC版の画面設計を行う。
