--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -15,3 +15,21 @@ gemでのインストールに変えたことによってTailwindで文字の色
 今日はfigmaのアーカイブを見て画面設計を行なった。
 初めてのツールで戸惑いも大きかったがスマホ版の画面設計を行なった。
 明日はPC版の画面設計を行う。
+
+2026-07-05
+環境構築後にしたこと
+docker compose exec web bin/rails g controller home index
+でhome画面に関するファイルを作成する
+
+config/routes.rb
+root “home#index”を追記
+
+app/views/layouts/application.html.erbは全ての画面で共有している部分（見た目）
+背景色などを作る
+
+app/views/home/index.html.erbはトップ画面（見た目）
+タイトルなどを作る
+
+app/assets/stylesheets/application.tailwind.cssはCSSのカスタマイズをする画面
+文字のフォントなどを変えたい時に追記
+その後にdocker compose exec web yarn build:cssで更新
