--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -33,3 +33,29 @@ app/views/home/index.html.erbはトップ画面（見た目）
 app/assets/stylesheets/application.tailwind.cssはCSSのカスタマイズをする画面
 文字のフォントなどを変えたい時に追記
 その後にdocker compose exec web yarn build:cssで更新
+
+ガチャの動きを作る
+モデル作成
+docker compose exec web bin/rails g model Bungo name:string image_path:string fact:text
+今回はミニアプリのため削除
+rm test/models/bungo_test.rb 
+rm test/fixtures/bungos.yml
+docker compose exec web bin/rails db:migrateでマイグレート適用
+
+コントローラーと対応するビューの作成
+docker compose exec web bin/rails g controller bungaos random
+同様に今回はミニアプリのため削除
+rm app/helpers/bungaos_helper.rb
+rm test/controllers/bungaos_controller_test.rb
+
+db/seeds.rb に10人分のデータを書く
+文豪名、テキスト、画像指定など
+docker compose exec web bin/rails db:seed:replantで更新（開発中のみ！）
+
+app/controllers/bungaos_controller.rb
+コントローラーにランダム処理を記載
+
+app/views/bungaos/random.html.erbにdb/seeds.rbの処理を呼び出しながらビューを整える。
+
+app/views/home/index.html.erbのボタンをリンクにする
+app/views/bungaos/random.html.erbのボタンをリンクにする
