--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -59,3 +59,10 @@ app/views/bungaos/random.html.erbにdb/seeds.rbの処理を呼び出しながら
 
 app/views/home/index.html.erbのボタンをリンクにする
 app/views/bungaos/random.html.erbのボタンをリンクにする
+
+ブラウザのラベル
+app/views/layouts/application.html.erb
+<title><%= content_for(:title) || "文豪豆知識" %></title>
+
+ブラウザのラベル画像
+ChatGPTで画像生成。figmaでサイズや画像ファイル形式を変えて差し替えたらブラウザでコマンド➕シフト➕Rで反映される。
