--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -65,4 +65,13 @@ app/views/layouts/application.html.erb
 <title><%= content_for(:title) || "文豪豆知識" %></title>
 
 ブラウザのラベル画像
+app/assets/images/pc
 ChatGPTで画像生成。figmaでサイズや画像ファイル形式を変えて差し替えたらブラウザでコマンド➕シフト➕Rで反映される。
+
+Twitterカード
+app/views/layouts/application.html.erb の <head> にmeta タグをセット
+app/views/bungaos/random.html.erbのシェアボタンにシェア機能実装
+
+https://yourapp.onrender.com/pc/ogp.png
+
+各ビューでレスポンシブ対応
