--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -1,77 +1,247 @@
-2026-07-01
-テキストを読みながらrailsnewを試みてlocalhost3000の画面まではいけたもののTailwindがうまく反映できずに
-終わってしまった。
-明日はスクールが過去に公式で出している完全理解Railsnewのアーカイブを視聴しもう一度環境構築を試みたい.
+2026-07-01~2026-07-13
+以下はnotionにもまとめた開発の流れ
+## Rails基礎21で環境構築(PostgreSQL,Tailwind,ruby:3.2.3からruby:3.3.6に変更)
 
-2026-07-02
-gemでのインストールに変えたことによってTailwindで文字の色を変えることができ環境構築が無事に成功した。
-明日はデザインが思い浮かばないためFigmaのアーカイブを視聴することで使い方を学習し、デザインのテンプレートを確認したい。
+## figmaで画面設計
 
-2026-07-03
-環境構築が終わったと思ったが突然のエラーで振り出しに戻る。同期の助けを得てなんとか再構築に成功した。
-明日は画面設計を行う。
+最新のイベントを視聴し操作を覚える。
 
-2026-07-04
-今日はfigmaのアーカイブを見て画面設計を行なった。
-初めてのツールで戸惑いも大きかったがスマホ版の画面設計を行なった。
-明日はPC版の画面設計を行う。
+option⌥で要素同士の距離を確認できる。
 
-2026-07-05
-環境構築後にしたこと
-docker compose exec web bin/rails g controller home index
-でhome画面に関するファイルを作成する
+## ホーム画面の作成
 
-config/routes.rb
-root “home#index”を追記
+以下のコマンドでhome画面に関するファイルを作成する。
 
-app/views/layouts/application.html.erbは全ての画面で共有している部分（見た目）
-背景色などを作る
+```ruby
+docker compose exec web bin/rails g controller home
+```
 
-app/views/home/index.html.erbはトップ画面（見た目）
-タイトルなどを作る
+今回はヘルパーとテストは作成しないので削除
 
-app/assets/stylesheets/application.tailwind.cssはCSSのカスタマイズをする画面
-文字のフォントなどを変えたい時に追記
-その後にdocker compose exec web yarn build:cssで更新
+```ruby
+rm app/helpers/home_helper.rb
 
-ガチャの動きを作る
-モデル作成
+rm test/controllers/home_controller_test.rb
+```
+
+**config/routes.rb**に以下を追記
+
+```ruby
+root “home#index”
+```
+
+**app/views/layouts/application.html.erb**には、全ての画面で共有している要素を書く。
+
+(例)背景色を作成する。
+
+**app/views/home/index.html.erb**はホーム画面
+
+(例)タイトルとボタンと装飾を作る。
+
+**app/assets/stylesheets/application.tailwind.css**はCSSのカスタマイズができる。
+
+文字のフォントの設定を行う。
+
+コードを書いたら以下のコマンドで更新する。
+
+```ruby
+docker compose exec web yarn build:css
+```
+
+---
+
+## ガチャの動きを作る
+
+### モデル作成
+
+```ruby
 docker compose exec web bin/rails g model Bungo name:string image_path:string fact:text
-今回はミニアプリのため削除
-rm test/models/bungo_test.rb 
+```
+
+今回は作成しないため削除
+
+```ruby
+rm test/models/bungo_test.rb
+
 rm test/fixtures/bungos.yml
-docker compose exec web bin/rails db:migrateでマイグレート適用
+```
 
-コントローラーと対応するビューの作成
+migrateの適用
+
+```ruby
+docker compose exec web bin/rails db:migrate
+```
+
+### コントローラーと対応するビューの作成
+
+```ruby
 docker compose exec web bin/rails g controller bungaos random
-同様に今回はミニアプリのため削除
+```
+
+今回は作成しないため削除
+
+```ruby
 rm app/helpers/bungaos_helper.rb
+
 rm test/controllers/bungaos_controller_test.rb
+```
 
-db/seeds.rb に10人分のデータを書く
-文豪名、テキスト、画像指定など
-docker compose exec web bin/rails db:seed:replantで更新（開発中のみ！）
+**db/seeds.rb** にデータを書く。
 
-app/controllers/bungaos_controller.rb
-コントローラーにランダム処理を記載
+(例)文豪名、テキスト、画像指定を記述。
 
-app/views/bungaos/random.html.erbにdb/seeds.rbの処理を呼び出しながらビューを整える。
+コードを書いたら以下のコマンドで更新する。
 
-app/views/home/index.html.erbのボタンをリンクにする
-app/views/bungaos/random.html.erbのボタンをリンクにする
+```ruby
+docker compose exec web bin/rails db:seed:replant
+```
 
-ブラウザのラベル
-app/views/layouts/application.html.erb
+**app/controllers/bungaos_controller.rb**
+
+(例)コントローラーにランダム処理を記述する。
+
+**app/views/bungaos/random.html.erb**に**db/seeds.rb**の処理を呼び出す。
+
+**app/views/home/index.html.erb**と**app/views/bungaos/random.html.erb**のボタンをリンクにする。
+
+---
+
+## **ブラウザのタブ**
+
+### ブラウザのタブのタイトル
+
+**app/views/layouts/application.html.erb**
+
+```ruby
 <title><%= content_for(:title) || "文豪豆知識" %></title>
+```
 
-ブラウザのラベル画像
-app/assets/images/pc
-ChatGPTで画像生成。figmaでサイズや画像ファイル形式を変えて差し替えたらブラウザでコマンド➕シフト➕Rで反映される。
+### ブラウザのファビコン
 
-Twitterカード
-app/views/layouts/application.html.erb の <head> にmeta タグをセット
-app/views/bungaos/random.html.erbのシェアボタンにシェア機能実装
+**public**の中の元々あるファビコンと差し替える。
 
-https://yourapp.onrender.com/pc/ogp.png
+ChatGPTで画像生成する。
 
-各ビューでレスポンシブ対応
+figmaでサイズや画像ファイル形式を変更後、画像を差し替えたらcommand➕shift➕Rでlocalhostに画像が適用される。
+
+サイズはpngは512✖️512、svgは100✖️100
+
+(例)一文字のファビコンを作りたい場合、正方形で文字は限界まで大きくと指示。
+
+---
+
+### Twitterカード
+
+**app/views/layouts/application.html.erb** の **<head>** に**<meta>**をセット
+
+**app/views/bungaos/random.html.erb**のシェアボタンにシェア機能を実装する。
+
+画像は**aseets/images**に入れる。
+
+サイズは1200✖️630
+
+---
+
+### 各ビューでレスポンシブを対応する。（今回はPCとスマホのみ）
+
+- **container**
+
+　   画面サイズに合わせて最大幅を自動で制限し、中央寄せの箱（レイアウトの枠）を作る。
+
+- **コンテナ幅の調整**
+1. max-w-[280px]（スマホ）
+2. sm:max-w-xl（PC）
+
+- **margin-top**
+
+ 　  画面が広くなるほど余白が大きくなるように調整する。
+
+- **クラス分け**
+画面サイズに対して画像やフォント、ボタンサイズを変更する。
+
+　　sm: ～ 640px以上のときに適用
+
+　　md: ～ 768px以上のときに適用
+
+　　lg: ～ 1024px以上のときに適用
+
+　　xl: ～ 1280px以上のときに適用
+
+- **flex**
+1. **flex-col(縦並び)**
+2. **flex-row(横並び)**
+
+(例)　
+
+　　　スマホのとき
+
+　　　 [画像]
+　　　 [テキスト]
+
+ 　　　PCのとき
+
+ 　　　[画像] [テキスト]
+
+- **カスタムスマホの対応**
+
+　　Tailwindのクラスで調整しきれない細かいスマホだけの調整をCSSで設定することができる。
+
+　　!importantを使うことでTailwind のスタイルを上書きすることができる。
+　　(例)画面サイズの小さいSEなど
+
+**※absolute(絶対値)は基本的にレスポンシブが厳しいので使用しない。**
+
+### 使わなかったけど気になること
+
+- **Tailwindコンポーネント化もできる**
+
+Tailwindだけで長いクラスを書きすぎると読みにくくなるので、再利用したいときは
+
+1. @apply を使って CSS にまとめる
+2. components/ui に共通部品を定義する
+
+---
+
+## デプロイ
+
+以下のURLの**Renderを使ったデプロイ**から下の記述を参照
+
+[https://succulent-gorilla-f9a.notion.site/17e39de727c38008bac9ea1679966d03](https://www.notion.so/17e39de727c38008bac9ea1679966d03?pvs=21)
+
+URLの**render-build.sh**に**bundle exec rails db:seed**を追記
+
+```ruby
+set -o errexit
+
+bundle install
+bundle exec rails assets:precompile
+bundle exec rails assets:clean
+bundle exec rails db:migrate
+bundle exec rails db:seed
+```
+
+私は上記をしなかったので本番環境にデータが何も入らず修正することになった。
+
+その際に**render-build.sh**に以下を一時的に追加
+
+```ruby
+DISABLE_DATABASE_ENVIRONMENT_CHECK=1 bundle exec rails db:reset
+```
+
+そして、pushすることで再度デプロイ。
+
+終わったら一時的に追加したコマンドを消すと本番環境にデータが入る。
+
+参考にした記事のURLは以下
+
+https://zenn.dev/d_miyabi/articles/0ce427f40d2306
+
+**※ただしこのコマンドは初期化されて危険なのでURLを公開していない段階でしか使用してはいけない。**
+
+---
+
+## スリープ対策
+
+以下のURLを参照
+
+https://qiita.com/nakad119/items/824db3e8721625f98fac
