--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -1,12 +1,16 @@
-2026-07-01~2026-07-13
-以下はnotionにもまとめた開発の流れ
+2025-07-01~2025-07-13
+以下はNotionにも書いた開発の流れ
 ## Rails基礎21で環境構築(PostgreSQL,Tailwind,ruby:3.2.3からruby:3.3.6に変更)
+
+**※githubのリポジトリ名はアプリのURLに一部使われるので慎重に決めよう。**
 
 ## figmaで画面設計
 
-最新のイベントを視聴し操作を覚える。
+最新のイベントを視聴し基本操作を覚える。
 
-option⌥で要素同士の距離を確認できる。
+Canvaから素材を持ってきて色を抽出したり、figmaで再現したりする。
+
+また、option⌥で要素同士の距離を確認できる。
 
 ## ホーム画面の作成
 
@@ -27,7 +31,7 @@ rm test/controllers/home_controller_test.rb
 **config/routes.rb**に以下を追記
 
 ```ruby
-root “home#index”
+root "home#index"
 ```
 
 **app/views/layouts/application.html.erb**には、全ての画面で共有している要素を書く。
@@ -75,16 +79,20 @@ docker compose exec web bin/rails db:migrate
 ### コントローラーと対応するビューの作成
 
 ```ruby
-docker compose exec web bin/rails g controller bungaos random
+touch app/controllers/bungos_controller.rb
+touch app/views/bungos/result.html.erb
 ```
 
-今回は作成しないため削除
+**config/routes.rb**に以下を追記
 
 ```ruby
-rm app/helpers/bungaos_helper.rb
-
-rm test/controllers/bungaos_controller_test.rb
+  get "bungos/random"
+  get "bungos/result"
 ```
+
+当初はビューを**app/views/bungos/random.html.erb**としていたがユーザーからのフィードバックによりガチャの動作の改善を試みた。
+
+その結果**app/views/bungos/random.html.erb**を削除し、コントローラーとビューを分けることによってガチャの動作をスムーズに行えるようになった。
 
 **db/seeds.rb** にデータを書く。
 
@@ -92,17 +100,19 @@ rm test/controllers/bungaos_controller_test.rb
 
 コードを書いたら以下のコマンドで更新する。
 
+デプロイ時のことを考え、create!は使わない。
+
 ```ruby
 docker compose exec web bin/rails db:seed:replant
 ```
 
-**app/controllers/bungaos_controller.rb**
+**app/controllers/bungos_controller.rb**
 
 (例)コントローラーにランダム処理を記述する。
 
-**app/views/bungaos/random.html.erb**に**db/seeds.rb**の処理を呼び出す。
+**app/views/bungos/result.html.erb**に**db/seeds.rb**の処理を呼び出す。
 
-**app/views/home/index.html.erb**と**app/views/bungaos/random.html.erb**のボタンをリンクにする。
+**app/views/home/index.html.erb**と**app/views/bungos/result.html.erb**のボタンをリンクにする。
 
 ---
 
@@ -130,19 +140,23 @@ figmaでサイズや画像ファイル形式を変更後、画像を差し替え
 
 ---
 
-### Twitterカード
+### Twitterカード(前編)
 
 **app/views/layouts/application.html.erb** の **<head>** に**<meta>**をセット
 
-**app/views/bungaos/random.html.erb**のシェアボタンにシェア機能を実装する。
+**app/views/bungos/result.html.erb**のシェアボタンにシェア機能を実装する。
 
-画像は**aseets/images**に入れる。
+画像はassets/imagesに入れる。
 
 サイズは1200✖️630
+
+**※デプロイ前の時点ではシェア機能の動作確認はできてもTwitterカードの表示を確認することはできない。**
 
 ---
 
 ### 各ビューでレスポンシブを対応する。（今回はPCとスマホのみ）
+
+私はPC画面から作ってしまったが、本来はスマホ画面から整えるのが正解っぽい？
 
 - **container**
 
@@ -202,7 +216,19 @@ Tailwindだけで長いクラスを書きすぎると読みにくくなるので
 
 ---
 
+## README
+
+他の人のgithubを参考にして書く。
+
+---
+
 ## デプロイ
+
+デプロイ前に最終確認としてLintチェックをしておく。
+
+```ruby
+docker compose exec web bundle exec rubocop
+```
 
 以下のURLの**Renderを使ったデプロイ**から下の記述を参照
 
@@ -220,6 +246,12 @@ bundle exec rails db:migrate
 bundle exec rails db:seed
 ```
 
+**※**この追記により本番環境にデータが入るはず。
+
+ただし、create!などの同じデータが重複されるコードを**db/seeds.rb**に書いている場合、二度目以降のデプロイでは**render-build.sh**の**bundle exec rails db:seed**を削除しておく必要あり。
+
+二度目以降のデプロイはpushすると自動で行われるので要注意。
+
 私は上記をしなかったので本番環境にデータが何も入らず修正することになった。
 
 その際に**render-build.sh**に以下を一時的に追加
@@ -228,15 +260,29 @@ bundle exec rails db:seed
 DISABLE_DATABASE_ENVIRONMENT_CHECK=1 bundle exec rails db:reset
 ```
 
-そして、pushすることで再度デプロイ。
+そして、pushすることで再度デプロイすると本番環境にデータが入る。
 
-終わったら一時的に追加したコマンドを消すと本番環境にデータが入る。
+終わったら一時的に追加したコマンドは消しておく。
 
 参考にした記事のURLは以下
 
 https://zenn.dev/d_miyabi/articles/0ce427f40d2306
 
 **※ただしこのコマンドは初期化されて危険なのでURLを公開していない段階でしか使用してはいけない。**
+
+今思えば今回の場合本番環境のデータは何も入っていなかったので、2回目以降のデプロイだとしても**render-build.sh**に**bundle exec rails db:seed**を追加し再デプロイするだけで解決したように思う。ただし、間違ったデータが入っている場合などは上記のように初期化する必要がある。
+
+---
+
+## Twitterカード(後編)
+
+**Card Validator**というツールを使いTwitterカードの表示の確認を行う。
+
+Xでシェアをする前に、先にツールでアプリのURLを入れることで情報が読み込まれるのでカードが表示されないというトラブルを防ぐことができる。
+
+以下が**Card Validator**のURL
+
+https://cards-dev.twitter.com/validator
 
 ---
 
@@ -245,3 +291,23 @@ https://zenn.dev/d_miyabi/articles/0ce427f40d2306
 以下のURLを参照
 
 https://qiita.com/nakad119/items/824db3e8721625f98fac
+
+---
+
+## 反省点
+
+- 制作期間が12日。そのうち環境構築が3日もかかったこと。
+- 手探りな開発すぎてissue作成が全くできなかったこと。
+- 開発の流れは掴めたもののコードの意味まで深く考えることができなかったこと。
+- READMEは最初に書いた方が良いこと。
+- ファイル名が軒並みbungosではなくタイポによりbungaosになっているため、動作に問題はないがサービス終了したら直しておきたいこと。
+
+---
+
+## その他
+
+ミニアプリでは時間の都合上、テーブル設計やテストの作成を飛ばしたが、卒業制作には必要になる。
+
+卒業制作の際はツールの課金も視野に入れて、特にコーディング部分は時短のためにもAIに任せることも考える。
+
+また、**Google Analytics**などのユーザー数を確認ができるツールの導入も良いかもしれない。
