--- a/アプリ開発.md
+++ b/アプリ開発.md
@@ -150,6 +150,8 @@ figmaでサイズや画像ファイル形式を変更後、画像を差し替え
 
 サイズは1200✖️630
 
+#は設定しておくと、アプリ触ってくれた人にお礼を言える。
+
 **※デプロイ前の時点ではシェア機能の動作確認はできてもTwitterカードの表示を確認することはできない。**
 
 ---
@@ -157,6 +159,14 @@ figmaでサイズや画像ファイル形式を変更後、画像を差し替え
 ### 各ビューでレスポンシブを対応する。（今回はPCとスマホのみ）
 
 私はPC画面から作ってしまったが、本来はスマホ画面から整えるのが正解っぽい？
+
+デペロッパーツールの上のボタンを押すとスマホ画面に切り替わる。
+
+下のボタンで詳細な調整も可能。
+
+![スクリーンショット 2025-07-13 19.49.04.png](attachment:3636fb79-6dc0-44de-a805-963e8174efc6:スクリーンショット_2025-07-13_19.49.04.png)
+
+![image.png](attachment:9bd83a70-d983-43b1-93e1-e913ff88a4e1:image.png)
 
 - **container**
 
